compiler/tools/fpp-check/test/constant/dictionary_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/constant/dictionary_error.fpp:1.1
dictionary constant c = { x = 0, y = 1 }
^
error: dictionary constant must have a numeric, Boolean, string, or enum type
